src/objects/Project__c.object
<CustomObject>
    <description>BME: A project is an proposed initiative undertaken by business and technology groups to support key business functions and value drivers</description>
    <fields>
        <fullName>Key_Stakeholder_s__c</fullName>
        <inlineHelpText>Enter all key project stakeholders</inlineHelpText>
        <label>Key Stakeholder(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Value_Drivers__c</fullName>
        <inlineHelpText>List the key value drivers for this project.</inlineHelpText>
        <label>Key Value Drivers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Objectives__c</fullName>
        <description>Lists the key objectives of the project.</description>
        <label>Project Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <description>Summary of the overall project.</description>
        <label>Project Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Summary__c</columns>
        <columns>Project_Objectives__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>